--- a/fthofplannerv2/index.css
+++ b/fthofplannerv2/index.css
@@ -36,4 +36,5 @@ a:hover,a.hover { text-decoration: underline; }
 
 .md-subheader .md-subheader-content { min-height: 2.5em; }
 
-.highlight { background-color: yellow; }
+.highlightCombo { background-color: yellow; }
+.highlightSkip { background-color: lightblue; }
